...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Job-->
        <scene sceneID="D4v-g3-YU6">
            <objects>
                <viewController title="Job" id="Z6l-Zt-xoB" customClass="JobViewController" customModule="TotalTime" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="gHq-Ya-cIk"/>
                        <viewControllerLayoutGuide type="bottom" id="tus-C1-jgf"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="ceR-li-fxp">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xYj-QF-F7C">
                                <rect key="frame" x="161" y="515" width="53" height="64"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="saveButton:" destination="Z6l-Zt-xoB" eventType="touchUpInside" id="p5p-Wy-oAG"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="580" y="529.38530734632684"/>
        </scene>
        <!--Done-->
        <scene sceneID="fz9-qG-7lp">
            <objects>
                <viewController title="Done" id="QCB-V1-eSC" customClass="DoneViewController" customModule="TotalTime" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="dsV-QV-vnD"/>
                        <viewControllerLayoutGuide type="bottom" id="9Pz-bR-NPp"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="2AE-tw-GGY">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
            </objects>
            <point key="canvasLocation" x="1389.5999999999999" y="533.88305847076469"/>
        </scene>
        <!--Home-->
        <scene sceneID="pDd-Oj-d67">
            <objects>
                <viewController title="Home" id="lce-WX-s2d" customClass="HomeViewController" customModule="TotalTime" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="stu-cm-HW7"/>
                        <viewControllerLayoutGuide type="bottom" id="uvJ-5w-JKv"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="nrh-Qh-RXp">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
            </objects>
            <point key="canvasLocation" x="580" y="-126.38680659670166"/>
        </scene>
        <!--History-->
        <scene sceneID="nHg-h6-0Hx">
            <objects>
                <viewController title="History" id="t8C-3s-QoY" customClass="HistoryViewController" customModule="TotalTime" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="0Es-vo-Sse"/>
                        <viewControllerLayoutGuide type="bottom" id="P3v-RL-3Uh"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="fez-9t-1vL">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
