...

        let job = Job(context: context)
        let client = Client(context: context)

        if (jobTitleField.text == "" || hourlyRateField.text == "" || clientEmailField.text == "") {
            let alertController = UIAlertController(title: "Not Enough Info", message: "Please enter Job Title, Hourly Rate, and Client Email to save", preferredStyle: .alert)
            alertController.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
            present(alertController, animated: true, completion: nil)
            return
        }

        job.title = jobTitleField.text
        job.hourlyRate = Float(hourlyRateField.text!)!
...
        job.completed = false
        client.name = clientNameField.text
        client.email = clientEmailField.text
        
        delegate.saveContext()
        
        let alertController = UIAlertController(title: "Saved!", message: "Successfully saved " + jobTitleField.text!, preferredStyle: .alert)
        alertController.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
        present(alertController, animated: true, completion: nil)
        
        jobTitleField.text = ""
        hourlyRateField.text = ""
        clientNameField.text = ""
...
